--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.0",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-helmet": "^6.1.4",
     "prettier": "2.4.1"
   },
   "keywords": [
