--- a/package.json
+++ b/package.json
@@ -5,25 +5,31 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^3.14.2",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-offline": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.1",
+    "gatsby-plugin-styled-components": "^4.14.0",
     "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-source-shopify": "^5.6.1",
     "gatsby-transformer-sharp": "^3.14.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.4",
-    "prettier": "2.4.1"
+    "@types/styled-components": "^5.1.15",
+    "prettier": "2.4.1",
+    "typescript": "^4.4.4"
   },
   "keywords": [
     "gatsby"
