--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^3.14.2",
+    "gatsby-plugin-graphql-codegen": "^3.1.0",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-offline": "^4.14.0",
