--- a/package.json
+++ b/package.json
@@ -24,12 +24,20 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.4",
     "@types/styled-components": "^5.1.15",
+    "babel-jest": "^27.3.1",
+    "babel-preset-gatsby": "^2.1.2",
+    "jest": "^27.3.1",
     "prettier": "2.4.1",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
   "keywords": [
@@ -43,7 +51,7 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
