--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "ts-node": "^10.4.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.0",
@@ -35,8 +36,10 @@
     "@types/styled-components": "^5.1.15",
     "babel-jest": "^27.3.1",
     "babel-preset-gatsby": "^2.1.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
     "prettier": "2.4.1",
+    "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
