--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "shopify-buy": "^2.13.0",
     "styled-components": "^5.3.3",
     "ts-node": "^10.4.0"
   },
@@ -34,6 +35,7 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.4",
+    "@types/shopify-buy": "^2.10.8",
     "@types/styled-components": "^5.1.15",
     "babel-jest": "^27.3.1",
     "babel-preset-gatsby": "^2.1.2",
