:wrench: added MAILCHIMP_ENDPOINT

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 GATSBY_STOREFRONT_ACCESS_TOKEN="***********************"
 GATSBY_SHOPIFY_STORE_URL="******.myshopify.com"
 SHOPIFY_SHOP_PASSWORD="shppa_***************************"
+MAILCHIMP_ENDPOINT="****************************"
